# terraformer

./: CMakeLists.txt  LICENSE  README.md
recipes/: glm.cmake  json.cmake  lua.cmake  openal.cmake  sdl2-image.cmake  sdl2-ttf.cmake  sdl2.cmake  sole.cmake  tweeny.cmake
scripts/: new-game.cmake  new-project.cmake
skel/: CMakeLists.txt
skel/cmake-modules/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
skel/src/: CMakeLists.txt  main.cpp
